--- a/K-Means pour entreprise-2.ipynb
+++ b/K-Means pour entreprise-2.ipynb
@@ -546,7 +546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La moyenne d'age des femmes est supérieure à celle des hommes. La moyenne des revenus des hommes est supérieur a la celle des femmes, mais les femmes dépensent plus que les hommes."
+    "La moyenne d'age des femmes est inférieure à celle des hommes. La moyenne des revenus des hommes est supérieure a la celle des femmes, mais les femmes dépensent plus que les hommes."
    ]
   },
   {
