--- a/Sujet 4 Bonne version NBA  .ipynb
+++ b/Sujet 4 Bonne version NBA  .ipynb
@@ -2107,7 +2107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion : les meilleurs modèles sur la base train est le Boosting (LGBM)."
+    "Conclusion : le meilleur modèle sur la base train est le Boosting (LGBM)."
    ]
   },
   {
@@ -2167,7 +2167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion : les meilleurs modèles sur la base test est la Regression Logistique.\n"
+    "Conclusion : le meilleur modèle sur la base test est la Regression Logistique.\n"
    ]
   },
   {
