Update Sujet 4 Bonne version NBA  .ipynb

--- a/Sujet 4 Bonne version NBA  .ipynb
+++ b/Sujet 4 Bonne version NBA  .ipynb
@@ -576,7 +576,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Caclul des taux de longevité octroyés : base train et test"
+    "Caclul des taux de longevité  : base train et test"
    ]
   },
   {
@@ -611,7 +611,6 @@
    ],
    "source": [
     "# But du code : Analyse descriptive de la variable Y longévité\n",
-    "# On observe la répartition des clients ayant obtenus une réponse positive de la banque (Loan_Status = 1) vs (Loan_Status = 0).\n",
     "\n",
     "plt.figure(figsize=(10, 3))\n",
     "\n",
